# symlix-web

./: Cargo.toml  LICENSE  README.md  config.toml  package.json
data/: music.ron  playlists.ron  streams.ron
src/: data.rs  hot_reload.js  main.rs  music.rs  pages.rs  serve.rs
static/css/: contact.css  main.css  music.css
static/js/: contact.js  main.js
templates/: base.html  music.html
templates/pages/: contact.html  demo.html
