[package]
name = "symlix-web"
version = "0.1.0"
edition = "2021"
authors = ["Théo 'Symlix' Degioanni"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = { version = "1.17.0", features = ["builtins"] }
walkdir = "2.3.2"
clap = { version = "3.2.17", features = ["derive"] }
ron = "0.8.0"
minify-html = "0.9.2"
css-minify = "0.2.2"
minify-js = "0.1.5"
anyhow = "1.0.62"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
itertools = "0.10.3"

# For hot reloading and serving
notify = { version = "4.0.17", optional = true }
ws = { version = "0.9.2", optional = true }
tokio = { version = "1.20.1", optional = true, features = ["rt-multi-thread"] }
axum = { version = "0.5.15", optional = true }
tower-http = { version = "0.3.4", optional = true, features = ["fs"] }
tower = { version = "0.4.13", optional = true, features = ["util"] }

[features]
default = ["dev"]
dev = ["notify", "ws", "tokio", "axum", "tower-http", "tower"]